--- a/ERP/templates/purchasing/landed_cost_list_page.html
+++ b/ERP/templates/purchasing/landed_cost_list_page.html
@@ -27,7 +27,7 @@
   <tr>
     <td class="fw-semibold">LC-{{ doc.pk }}</td>
     <td>PI-{{ doc.purchase_invoice.number|default:doc.purchase_invoice.pk }}</td>
-    <td>{{ doc.purchase_invoice.supplier.display_name }}</td>
+    <td>{{ doc.purchase_invoice.vendor.display_name }}</td>
     <td>{{ doc.document_date }}</td>
     <td>
       {% if doc.is_applied %}
